--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bob's Burgers</title>
   </head>
   <body>
